# Navigation-of-an-Autonomous-Differential-Drive-Robot

./: README.md
navros_pkg/: package.xml
navros_pkg/launch/: spawn_world.launch  urdf_gazebo_view.launch
navros_pkg/maps/: map.pgm
navros_pkg/urdf/: car.urdf.xacro  gazebo_plugins.urdf.xacro
